[gd_scene load_steps=23 format=4 uid="uid://30jb4kc5kf5p"]

[ext_resource type="PackedScene" uid="uid://bv1ul1qynrdwd" path="res://Tablero/Cursor/Cursor.tscn" id="1"]
[ext_resource type="PackedScene" uid="uid://d4mhjq651egt" path="res://Unidades/Unidad.tscn" id="2"]
[ext_resource type="Script" path="res://Tablero/Tablero.gd" id="3"]
[ext_resource type="Texture2D" uid="uid://cocms0prufyqi" path="res://Fondos/grasslands.png" id="3_b1a20"]
[ext_resource type="Script" path="res://Fondos/Mapa.gd" id="4_a2m4i"]
[ext_resource type="TileSet" uid="uid://dkha5qr3ak12f" path="res://OverlayUnidades/unit_overlay_tileset.tres" id="5_4pv4q"]
[ext_resource type="Resource" uid="uid://br6chqrr1yghv" path="res://Tablero/Grilla.tres" id="5_xy83f"]
[ext_resource type="Script" path="res://OverlayUnidades/OverlayUnidades.gd" id="6_y5045"]
[ext_resource type="TileSet" uid="uid://dqg14aj86so4a" path="res://Tablero/unit_path_tileset.tres" id="7_s8tol"]
[ext_resource type="Texture2D" uid="uid://dsf2gi5bc5vef" path="res://Unidades/Lemonade.png" id="8_4rdsk"]
[ext_resource type="Texture2D" uid="uid://cg0e2btmaasnk" path="res://Unidades/Aqua.png" id="8_bqiqv"]
[ext_resource type="Script" path="res://Tablero/CaminoUnidades.gd" id="8_r4dxg"]
[ext_resource type="Texture2D" uid="uid://lfbeg22ky41j" path="res://Unidades/Dream.png" id="9_4siiw"]

[sub_resource type="GDScript" id="GDScript_yxhkp"]
script/source = "@export var datos_movimiento: Dictionary
"

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_5tkph"]
texture = ExtResource("3_b1a20")
texture_region_size = Vector2i(80, 80)
0:0/next_alternative_id = 8
0:0/0 = 0
0:0/1 = 1
0:0/1/flip_h = true
0:0/2 = 2
0:0/2/flip_v = true
0:0/3 = 3
0:0/3/flip_h = true
0:0/3/flip_v = true
0:0/4 = 4
0:0/4/transpose = true
0:0/5 = 5
0:0/5/flip_h = true
0:0/5/transpose = true
0:0/6 = 6
0:0/6/flip_v = true
0:0/6/transpose = true
0:0/7 = 7
0:0/7/flip_h = true
0:0/7/flip_v = true
0:0/7/transpose = true
1:0/0 = 0
2:0/0 = 0

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_c308a"]
texture = ExtResource("3_b1a20")
texture_region_size = Vector2i(80, 80)
3:0/0 = 0

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_2pheo"]
texture = ExtResource("3_b1a20")
texture_region_size = Vector2i(80, 80)
4:0/0 = 0

[sub_resource type="TileSet" id="1"]
tile_size = Vector2i(80, 80)
sources/0 = SubResource("TileSetAtlasSource_5tkph")
sources/1 = SubResource("TileSetAtlasSource_c308a")
sources/2 = SubResource("TileSetAtlasSource_2pheo")
script = SubResource("GDScript_yxhkp")
datos_movimiento = {
0: 1,
1: 2,
2: 99999
}

[sub_resource type="Curve2D" id="Curve2D_6y63j"]
resource_local_to_scene = true

[sub_resource type="Curve2D" id="Curve2D_j8koj"]
resource_local_to_scene = true

[sub_resource type="Curve2D" id="Curve2D_fmun5"]
resource_local_to_scene = true

[sub_resource type="Curve2D" id="Curve2D_h7v6s"]
resource_local_to_scene = true

[node name="Main" type="Node2D"]

[node name="Tablero" type="Node2D" parent="."]
script = ExtResource("3")
grilla = ExtResource("5_xy83f")

[node name="Mapa" type="TileMapLayer" parent="Tablero"]
use_parent_material = true
tile_map_data = PackedByteArray("AAD+//7/AAAAAAAAAAD///7/AAAAAAAAAAAAAP7/AAAAAAAAAAABAP7/AAAAAAAAAAACAP7/AAAAAAAAAAADAP7/AAAAAAAAAAAEAP7/AAAAAAAAAAAFAP7/AAAAAAAAAAAGAP7/AAAAAAAAAAAHAP7/AAAAAAAAAAAIAP7/AAAAAAAAAAAJAP7/AAAAAAAAAAAKAP7/AAAAAAAAAAALAP7/AAAAAAAAAAAMAP7/AAAAAAAAAAANAP7/AAAAAAAAAAAOAP7/AAAAAAAAAAAPAP7/AAAAAAAAAAAQAP7/AAAAAAAAAAARAP7/AAAAAAAAAAD+////AAAAAAAAAAD/////AAAAAAAAAAAAAP//AAAAAAAAAAABAP//AAAAAAAAAAACAP//AAAAAAAAAAADAP//AAAAAAAAAAAEAP//AAAAAAAAAAAFAP//AAAAAAAAAAAGAP//AAAAAAAAAAAHAP//AAAAAAAAAAAIAP//AAAAAAAAAAAJAP//AAAAAAAAAAAKAP//AAAAAAAAAAALAP//AAAAAAAAAAAMAP//AAAAAAAAAAANAP//AAAAAAAAAAAOAP//AAAAAAAAAAAPAP//AAAAAAAAAAAQAP//AAAAAAAAAAARAP//AAAAAAAAAAD+/wAAAAAAAAAAAAD//wAAAAAAAAAAAAAQAAAAAAAAAAAAAAARAAAAAAAAAAAAAAD+/wEAAAAAAAAAAAD//wEAAAAAAAAAAAAQAAEAAAAAAAAAAAARAAEAAAAAAAAAAAD+/wIAAAAAAAAAAAD//wIAAAAAAAAAAAAQAAIAAgAEAAAAAAARAAIAAAAAAAAAAAD+/wMAAAAAAAAAAAD//wMAAAAAAAAAAAAQAAMAAAAAAAAAAAARAAMAAAAAAAAAAAD+/wQAAAAAAAAAAAD//wQAAAAAAAAAAAAQAAQAAAAAAAAAAAARAAQAAAAAAAAAAAD+/wUAAAAAAAAAAAD//wUAAAAAAAAAAAAQAAUAAAAAAAAAAAARAAUAAAAAAAAAAAD+/wYAAAAAAAAAAAD//wYAAAAAAAAAAAAQAAYAAAAAAAAAAAARAAYAAAAAAAAAAAD+/wcAAAAAAAAAAAD//wcAAAAAAAAAAAAQAAcAAAAAAAAAAAARAAcAAAAAAAAAAAD+/wgAAAAAAAAAAAD//wgAAAAAAAAAAAAQAAgAAAAAAAAAAAARAAgAAAAAAAAAAAD+/wkAAAAAAAAAAAD//wkAAAAAAAAAAAAAAAkAAAAAAAAAAAABAAkAAAAAAAAAAAACAAkAAAAAAAAAAAADAAkAAgAEAAAAAAAEAAkAAAAAAAAAAAAFAAkAAAACAAAAAAAGAAkAAAACAAAAAAAHAAkAAAACAAAAAAAIAAkAAAACAAAAAAAJAAkAAAACAAAAAAAKAAkAAAACAAAAAAALAAkAAAAAAAAAAAAMAAkAAAAAAAAAAAANAAkAAAAAAAAAAAAOAAkAAAAAAAAAAAAPAAkAAAAAAAAAAAAQAAkAAAAAAAAAAAARAAkAAAAAAAAAAAD+/woAAAAAAAAAAAD//woAAAAAAAAAAAAAAAoAAAAAAAAAAAABAAoAAAAAAAAAAAACAAoAAAAAAAAAAAADAAoAAAAAAAAAAAAEAAoAAAAAAAAAAAAFAAoAAAAAAAAAAAAGAAoAAAAAAAAAAAAHAAoAAAAAAAAAAAAIAAoAAAAAAAAAAAAJAAoAAAAAAAAAAAAKAAoAAAAAAAAAAAALAAoAAAAAAAAAAAAMAAoAAAAAAAAAAAANAAoAAAAAAAAAAAAOAAoAAAAAAAAAAAAPAAoAAAAAAAAAAAAQAAoAAAAAAAAAAAARAAoAAAAAAAAAAAAAAAAAAAAAAAAAAAABAAAAAAAAAAAAAAACAAAAAAAAAAAAAAADAAAAAAAAAAAAAAAEAAAAAAAAAAAAAAAFAAAAAAAAAAAAAAAGAAAAAAAAAAAAAAAHAAAAAAAAAAAAAAAPAAAAAAAAAAAAAAAOAAAAAAAAAAAAAAANAAAAAAAAAAAAAAAMAAAAAAAAAAAAAAALAAAAAAAAAAAAAAAKAAAAAAAAAAAAAAAJAAAAAAAAAAAAAAAIAAAAAAAAAAAAAAAFAAEAAAAAAAAAAAAEAAEAAAAAAAAAAAADAAEAAAAAAAAAAAACAAEAAAAAAAAAAAABAAEAAAAAAAAAAAAAAAEAAAAAAAAAAAAGAAEAAAAAAAAAAAAHAAEAAAAAAAAAAAAIAAEAAAACAAAAAAAJAAEAAAAAAAAAAAAKAAEAAAAAAAAAAAALAAEAAAAAAAAAAAAMAAEAAAAAAAAAAAANAAEAAAAAAAAAAAAOAAEAAAAAAAAAAAAPAAEAAAAAAAAAAAAPAAIAAgAEAAAAAAAOAAIAAgAEAAAAAAANAAIAAgAEAAAAAAAMAAIAAgAEAAAAAAALAAIAAgAEAAAAAAAKAAIAAgAEAAAAAAAJAAIAAgAEAAAAAAAIAAIAAgAEAAAAAAAHAAIAAgAEAAAAAAAGAAIAAgAEAAAAAAAFAAIAAgAEAAAAAAAEAAIAAgAEAAAAAAADAAIAAgAEAAAAAAACAAIAAgAEAAAAAAABAAIAAAAAAAAAAAAAAAIAAAAAAAAAAAAAAAMAAAAAAAAAAAABAAMAAAAAAAAAAAACAAMAAgAEAAAAAAADAAMAAAAAAAAAAAADAAQAAAAAAAAAAAAEAAQAAgAEAAAAAAAEAAMAAAAAAAAAAAAFAAMAAAAAAAAAAAAGAAMAAAAAAAAAAAAHAAMAAAAAAAAAAAAIAAMAAAAAAAAAAAAJAAMAAAAAAAAAAAAKAAMAAAAAAAAAAAALAAMAAQADAAAAAAAMAAMAAAAAAAAAAAANAAMAAQADAAAAAAAOAAMAAQADAAAAAAAPAAMAAAAAAAAAAAAPAAQAAAAAAAAAAAAOAAQAAQADAAAAAAANAAQAAQADAAAAAAAMAAQAAAAAAAAAAAALAAQAAQADAAAAAAAKAAQAAAAAAAAAAAAJAAQAAAAAAAAAAAAIAAQAAAAAAAAAAAAHAAQAAAAAAAAAAAAGAAQAAAAAAAAAAAAFAAQAAAAAAAAAAAACAAQAAgAEAAAAAAABAAQAAAAAAAAAAAAAAAQAAAAAAAAAAAAAAAUAAAAAAAAAAAABAAUAAAAAAAAAAAACAAUAAgAEAAAAAAADAAUAAgAEAAAAAAAEAAUAAgAEAAAAAAAFAAUAAAACAAAAAAAGAAUAAAAAAAAAAAAHAAUAAAAAAAAAAAAIAAUAAAAAAAAAAAAJAAUAAAAAAAAAAAAKAAUAAAAAAAAAAAALAAUAAQADAAAAAAAPAAUAAAAAAAAAAAAOAAUAAQADAAAAAAANAAUAAQADAAAAAAAMAAUAAAAAAAAAAAANAAYAAQADAAAAAAAOAAYAAQADAAAAAAAPAAYAAAAAAAAAAAAMAAYAAAAAAAAAAAALAAYAAQADAAAAAAAKAAYAAAAAAAAAAAAJAAYAAAAAAAAAAAAIAAYAAAAAAAAAAAAHAAYAAAAAAAAAAAAGAAYAAAAAAAAAAAAFAAYAAAACAAAAAAAEAAYAAAACAAAAAAADAAYAAAAAAAAAAAACAAYAAgAEAAAAAAABAAYAAAAAAAAAAAAAAAYAAAAAAAAAAAAAAAcAAAAAAAAAAAABAAcAAAAAAAAAAAACAAcAAgAEAAAAAAADAAcAAgAEAAAAAAAEAAcAAAAAAAAAAAAFAAcAAAAAAAAAAAAGAAcAAAAAAAAAAAAHAAcAAAAAAAAAAAAIAAcAAAAAAAAAAAAJAAcAAAACAAAAAAAKAAcAAAACAAAAAAALAAcAAQADAAAAAAAMAAcAAAAAAAAAAAANAAcAAAAAAAAAAAAOAAcAAAAAAAAAAAAPAAcAAAACAAAAAAAPAAgAAAACAAAAAAAOAAgAAAACAAAAAAANAAgAAAAAAAAAAAAMAAgAAAAAAAAAAAALAAgAAQADAAAAAAAKAAgAAAAAAAAAAAAJAAgAAAAAAAAAAAAIAAgAAAAAAAAAAAAHAAgAAAAAAAAAAAAGAAgAAAAAAAAAAAAFAAgAAAACAAAAAAAEAAgAAAAAAAAAAAADAAgAAgAEAAAAAAACAAgAAAAAAAAAAAABAAgAAAAAAAAAAAAAAAgAAAAAAAAAAAASAAAAAAAAAAAAAAATAAAAAAAAAAAAAAAUAAAAAAAAAAAAAAAVAAAAAAAAAAAAAAAVAAEAAAAAAAAAAAAVAAIAAAAAAAAAAAAVAAMAAAAAAAAAAAAVAAQAAAAAAAAAAAAVAAUAAAAAAAAAAAAVAAYAAAAAAAAAAAAVAAcAAAAAAAAAAAAVAAgAAAABAAAAAAAVAAkAAAABAAAAAAAVAAoAAAAAAAAAAAAVAAsAAAAAAAAAAAAVAAwAAAAAAAAAAAAVAA0AAAAAAAAAAAAVAA4AAAAAAAAAAAAUAA4AAAAAAAAAAAATAA4AAAAAAAAAAAASAA4AAAAAAAAAAAARAA4AAAAAAAAAAAAQAA4AAAAAAAAAAAAPAA4AAAAAAAAAAAAOAA4AAAAAAAAAAAANAA4AAAAAAAAAAAAMAA4AAAAAAAAAAAALAA4AAAAAAAAAAAAKAA4AAAAAAAAAAAAJAA4AAAAAAAAAAAAIAA4AAAAAAAAAAAAHAA4AAAAAAAAAAAAGAA4AAAAAAAAAAAAFAA8AAAAAAAAAAAAEAA8AAAAAAAAAAAADAA8AAAAAAAAAAAACAA8AAAAAAAAAAAABAA8AAAAAAAAAAAABAA4AAAAAAAAAAAAAAA4AAAAAAAAAAAAAAA0AAAAAAAAAAAABAA0AAAAAAAAAAAABAAwAAAAAAAAAAAABAAsAAAAAAAAAAAAAAAsAAAAAAAAAAAAAAAwAAAAAAAAAAAACAA4AAAAAAAAAAAADAA4AAAAAAAAAAAAEAA4AAAAAAAAAAAAFAA4AAAAAAAAAAAAKAA8AAAAAAAAAAAAJAA8AAAAAAAAAAAAIAA8AAAAAAAAAAAAHAA8AAAAAAAAAAAAGAA8AAAAAAAAAAAAAAA8AAAAAAAAAAAALAA8AAAAAAAAAAAAMAA8AAAAAAAAAAAANAA8AAAAAAAAAAAAOAA8AAAAAAAAAAAAPAA8AAAAAAAAAAAAQAA8AAAAAAAAAAAARAA8AAAAAAAAAAAASAA8AAAAAAAAAAAATAA8AAAAAAAAAAAAUAA8AAAAAAAAAAAAVAA8AAAAAAAAAAAAUAA0AAAAAAAAAAAATAA0AAAAAAAAAAAASAA0AAAAAAAAAAAARAA0AAAAAAAAAAAAQAA0AAAAAAAAAAAAPAA0AAAAAAAAAAAAOAA0AAAAAAAAAAAANAA0AAAAAAAAAAAAMAA0AAAAAAAAAAAALAA0AAAAAAAAAAAAKAA0AAAAAAAAAAAAJAA0AAAAAAAAAAAAIAA0AAAAAAAAAAAAHAA0AAAAAAAAAAAAGAA0AAAAAAAAAAAAFAA0AAAAAAAAAAAAEAA0AAAAAAAAAAAADAA0AAAAAAAAAAAACAA0AAAAAAAAAAAACAAwAAAAAAAAAAAACAAsAAAAAAAAAAAADAAsAAAAAAAAAAAADAAwAAAAAAAAAAAAEAAwAAAAAAAAAAAAFAAwAAAAAAAAAAAAGAAwAAAAAAAAAAAAGAAsAAAAAAAAAAAAFAAsAAAAAAAAAAAAEAAsAAAAAAAAAAAAHAAsAAAAAAAAAAAAIAAsAAAAAAAAAAAAJAAsAAAAAAAAAAAAKAAsAAAAAAAAAAAALAAsAAAAAAAAAAAAMAAsAAAAAAAAAAAANAAsAAAAAAAAAAAAOAAsAAAAAAAAAAAAPAAsAAAAAAAAAAAAQAAsAAAAAAAAAAAARAAsAAAAAAAAAAAASAAsAAAAAAAAAAAATAAsAAAAAAAAAAAAUAAsAAAAAAAAAAAAUAAwAAAAAAAAAAAATAAwAAAAAAAAAAAASAAwAAAAAAAAAAAARAAwAAAAAAAAAAAANAAwAAAAAAAAAAAAMAAwAAAAAAAAAAAALAAwAAAAAAAAAAAAKAAwAAAAAAAAAAAAJAAwAAAAAAAAAAAAIAAwAAAAAAAAAAAAHAAwAAAAAAAAAAAAOAAwAAAAAAAAAAAAPAAwAAAAAAAAAAAAQAAwAAAAAAAAAAAATAAoAAAAAAAAAAAASAAoAAAAAAAAAAAAUAAoAAAAAAAAAAAAUAAkAAAAAAAAAAAATAAkAAAAAAAAAAAASAAkAAAAAAAAAAAASAAgAAAAAAAAAAAATAAgAAAAAAAAAAAAUAAgAAAAAAAAAAAATAAcAAAAAAAAAAAAUAAcAAAAAAAAAAAASAAcAAAAAAAAAAAASAAYAAAAAAAAAAAATAAYAAAAAAAAAAAAUAAYAAAAAAAAAAAAUAAUAAAAAAAAAAAATAAUAAAAAAAAAAAASAAUAAAAAAAAAAAASAAQAAAAAAAAAAAATAAQAAAAAAAAAAAAUAAQAAAAAAAAAAAAUAAMAAAAAAAAAAAAUAAIAAAAAAAAAAAATAAIAAAAAAAAAAAASAAIAAAAAAAAAAAASAAMAAAAAAAAAAAATAAMAAAAAAAAAAAAUAAEAAAAAAAAAAAATAAEAAAAAAAAAAAASAAEAAAAAAAAAAAD//wsAAAABAAAAAAD+/wsAAAABAAAAAAD+/wwAAAABAAAAAAD+/w0AAAABAAAAAAD//w0AAAABAAAAAAD//w4AAAABAAAAAAD//w8AAAABAAAAAAD+/w8AAAABAAAAAAD+/w4AAAABAAAAAAD//wwAAAABAAAAAAAVAP//AAABAAAAAAAUAP//AAABAAAAAAATAP//AAABAAAAAAASAP//AAABAAAAAAASAP7/AAABAAAAAAATAP7/AAABAAAAAAAUAP7/AAABAAAAAAAVAP7/AAABAAAAAAD9//7/AAABAAAAAAD9////AAABAAAAAAD9/wAAAAABAAAAAAD9/wEAAAABAAAAAAD9/wIAAAABAAAAAAD9/wMAAAABAAAAAAD9/wQAAAABAAAAAAD9/wUAAAABAAAAAAD9/wYAAAABAAAAAAD9/wcAAAABAAAAAAD9/wgAAAABAAAAAAD9/wkAAAABAAAAAAD8/wkAAAABAAAAAAD8/woAAAABAAAAAAD8/wsAAAABAAAAAAD8/wwAAAABAAAAAAD8/w0AAAABAAAAAAD8/w4AAAABAAAAAAD9/w4AAAABAAAAAAD9/w8AAAABAAAAAAD9/xAAAAABAAAAAAD9/w0AAAABAAAAAAD9/wwAAAABAAAAAAD9/wsAAAABAAAAAAD9/woAAAABAAAAAAD8/wgAAAABAAAAAAD8/w8AAAABAAAAAAD8/xAAAAABAAAAAAD+/xAAAAABAAAAAAD//xAAAAABAAAAAAAAABAAAAABAAAAAAABABAAAAABAAAAAAACABAAAAABAAAAAAADABAAAAABAAAAAAAEABAAAAABAAAAAAAFABAAAAABAAAAAAAGABAAAAABAAAAAAAHABAAAAABAAAAAAAIABAAAAABAAAAAAAJABAAAAABAAAAAAAKABAAAAABAAAAAAALABAAAAABAAAAAAAMABAAAAABAAAAAAANABAAAAABAAAAAAAOABAAAAABAAAAAAAPABAAAAABAAAAAAAQABAAAAABAAAAAAARABAAAAABAAAAAAASABAAAAABAAAAAAATABAAAAABAAAAAAAUABAAAAABAAAAAAAVABAAAAABAAAAAAAWABAAAAABAAAAAAAWAA8AAAABAAAAAAAWAA4AAAABAAAAAAAWAA0AAAABAAAAAAAWAAwAAAABAAAAAAAWAAsAAAABAAAAAAAWAAoAAAABAAAAAAAWAAkAAAABAAAAAAAWAAcAAAABAAAAAAAWAAYAAAABAAAAAAAWAAgAAAABAAAAAAAWAAUAAAABAAAAAAAWAAQAAAABAAAAAAAWAAMAAAABAAAAAAAWAAIAAAABAAAAAAAWAAEAAAABAAAAAAAWAAAAAAABAAAAAAAWAP//AAABAAAAAAAWAP7/AAABAAAAAAD8/wcAAAABAAAAAAD8/wYAAAABAAAAAAD8/wUAAAABAAAAAAD8/wQAAAABAAAAAAD8/wMAAAABAAAAAAD8/wIAAAABAAAAAAD8/wEAAAABAAAAAAD8/wAAAAABAAAAAAD8//7/AAABAAAAAAD8////AAABAAAAAAD8//3/AAABAAAAAAD9//3/AAABAAAAAAD+//3/AAABAAAAAAD///3/AAABAAAAAAAAAP3/AAABAAAAAAABAP3/AAABAAAAAAACAP3/AAABAAAAAAADAP3/AAABAAAAAAADAPz/AAABAAAAAAAEAPz/AAABAAAAAAAFAPz/AAABAAAAAAAGAPz/AAABAAAAAAAHAPz/AAABAAAAAAAIAPz/AAABAAAAAAAJAPz/AAABAAAAAAAKAPz/AAABAAAAAAALAPz/AAABAAAAAAAMAPz/AAABAAAAAAANAPz/AAABAAAAAAAOAPz/AAABAAAAAAAPAPz/AAABAAAAAAAPAP3/AAABAAAAAAAQAP3/AAABAAAAAAARAP3/AAABAAAAAAASAP3/AAABAAAAAAATAP3/AAABAAAAAAAUAP3/AAABAAAAAAAVAP3/AAABAAAAAAAWAP3/AAABAAAAAAAWAPz/AAABAAAAAAAVAPz/AAABAAAAAAAUAPz/AAABAAAAAAATAPz/AAABAAAAAAASAPz/AAABAAAAAAARAPz/AAABAAAAAAAQAPz/AAABAAAAAAAOAP3/AAABAAAAAAANAP3/AAABAAAAAAAMAP3/AAABAAAAAAALAP3/AAABAAAAAAAKAP3/AAABAAAAAAAJAP3/AAABAAAAAAAIAP3/AAABAAAAAAAHAP3/AAABAAAAAAAGAP3/AAABAAAAAAAFAP3/AAABAAAAAAAEAP3/AAABAAAAAAACAPz/AAABAAAAAAABAPz/AAABAAAAAAAAAPz/AAABAAAAAAD///z/AAABAAAAAAD+//z/AAABAAAAAAD9//z/AAABAAAAAAD8//z/AAABAAAAAAA=")
tile_set = SubResource("1")
script = ExtResource("4_a2m4i")

[node name="OverlayUnidades" type="TileMapLayer" parent="Tablero"]
modulate = Color(1, 1, 1, 0.32)
light_mask = 0
use_parent_material = true
tile_set = ExtResource("5_4pv4q")
script = ExtResource("6_y5045")

[node name="CaminoUnidades" type="TileMapLayer" parent="Tablero"]
use_parent_material = true
tile_set = ExtResource("7_s8tol")
script = ExtResource("8_r4dxg")
grilla = ExtResource("5_xy83f")

[node name="Cursor" parent="Tablero" instance=ExtResource("1")]
position = Vector2(590, 456)
grilla = ExtResource("5_xy83f")

[node name="Aqua" parent="Tablero" instance=ExtResource("2")]
position = Vector2(600, 463)
curve = SubResource("Curve2D_6y63j")
grilla = ExtResource("5_xy83f")
rango_movimiento = 1
rango_ataque = 3
skin = ExtResource("8_bqiqv")
skin_offset = Vector2(0, 20)

[node name="Lemonade" parent="Tablero" instance=ExtResource("2")]
position = Vector2(840.293, 383.465)
curve = SubResource("Curve2D_j8koj")
grilla = ExtResource("5_xy83f")
rango_movimiento = 8
rango_ataque = 6
skin = ExtResource("8_4rdsk")
skin_offset = Vector2(0, 20)

[node name="Dream" parent="Tablero" instance=ExtResource("2")]
position = Vector2(360.298, 298.556)
curve = SubResource("Curve2D_fmun5")
grilla = ExtResource("5_xy83f")
rango_ataque = 1
skin = ExtResource("9_4siiw")
skin_offset = Vector2(0, 20)

[node name="DarkDream" parent="Tablero" instance=ExtResource("2")]
modulate = Color(0.666755, 0.251931, 0.511438, 1)
position = Vector2(468.298, 522.556)
curve = SubResource("Curve2D_h7v6s")
grilla = ExtResource("5_xy83f")
es_enemigo = true
esta_esperando = true
rango_ataque = 2
skin = ExtResource("9_4siiw")
skin_offset = Vector2(0, 20)

[connection signal="aceptar_presionada" from="Tablero/Cursor" to="Tablero" method="_on_Cursor_aceptar_presionada"]
[connection signal="movida" from="Tablero/Cursor" to="Tablero" method="_on_Cursor_movido"]
